# media-server

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
helm/media-server/: Chart.yaml  values.yaml
helm/media-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  stunner-routes.yaml
k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  stunner-routes.yaml
proto/: signaling.proto
src/: lib.rs
src/signal/: mod.rs
src/transcription/: client.rs  decoder.rs  handler.rs  manager.rs  mod.rs
src/transcription/backends/: mod.rs  openai.rs  simul_streaming.rs
transcription-server/: Dockerfile  README.md  docker-compose.yml  setup_local.sh
