[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
log = "0.4.28"
opentelemetry = { version = "0.22.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["metrics", "rt-tokio-current-thread"] }
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread", "macros", "signal"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
env_logger = "0.11.8"
chrono = "0.4.42"
rouille = { version = "3.6", features = ["ssl"] }
num_cpus = "1.17.0"
smol = "2.0.2"
dtls = { version = "0.1.1", package = "rtc-dtls" }
opentelemetry-stdout = { version = "0.3.0", features = ["metrics"] }
retty = "0.27"
waitgroup = "0.1.2"
bytes = "1.10.1"
futures = "0.3.31"
hyper = { version = "0.14", features = ["server", "http1", "tcp", "stream"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
rand = "0.9.2"
sfu = "0.0.3"
async-broadcast = "0.7.2"
rcgen = "0.12"
ctrlc = "3.5.1"
core_affinity = "0.8"
sctp = { version = "0.1.1", package = "rtc-sctp" }
crossbeam-channel = "0.5.15"
wg = "0.9.2"
systemstat = "0.2.5"
tonic = { version = "0.12" }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "sfu-server"
path = "src/bin/sfu.rs"